--- a/src/containers/register/register.module.css
+++ b/src/containers/register/register.module.css
@@ -8,9 +8,8 @@
   padding: 30px;
   box-shadow: 10px 5px 5px gray;
   border-radius: 10px;
-  position: absolute;
-  top: 250px;
-  left: 25%;
+  margin-top: 100px;
+  background-color: white;
 }
 .image {
   width: 350px;
@@ -45,13 +44,17 @@
     left: 12%;
   }
   .button {
-    padding: 7px;
-    font-size: 12px;
+    padding: 3px;
+    font-size: 7px;
   }
   .button:hover {
     background-color: darkblue;
     color: white;
     border-radius: 5px;
+  }
+  .btndisabled {
+    padding: 7px;
+    font-size: 12px;
   }
 }
 .form {
@@ -83,4 +86,46 @@
   font-size: 20px;
   margin: auto;
   margin-top: 10px;
+}
+.spinner {
+  width: 35%;
+  height: 300px;
+  padding: 50px;
+  border: solid;
+  border-width: 3px;
+  border-color: black;
+  text-align: center;
+  margin: auto;
+  margin-top: 150px;
+  box-sizing: border-box;
+  box-shadow: 5px 10px cornflowerblue;
+}
+.message {
+  width: 100%;
+  height: 50%;
+  padding-top: 20px;
+  background-color: black;
+  color: white;
+  box-sizing: border-box;
+}
+.temp {
+  text-align: center;
+}
+@media (max-width: 600px) {
+  .spinner {
+    width: 80%;
+  }
+}
+@media (max-width: 350px) {
+  .spinner {
+    height: 200px;
+  }
+  .temp {
+    display: none;
+  }
+  .message {
+    height: 80px;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
 }
